fix overflow

--- a/css/index.css
+++ b/css/index.css
@@ -86,7 +86,8 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 #window > article > .tab {
